CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 17)

PROJECT(DesignedPattern)

SET(BIN_PATH ${PROJECT_SOURCE_DIR}/build/bin)
SET(EXECUTABLE_OUTPUT_PATH ${BIN_PATH})

add_subdirectory(01Creational-Pattern/01Factory-Method)
add_subdirectory(01Creational-Pattern/02Abstract-Factory)
add_subdirectory(01Creational-Pattern/03Builder)
add_subdirectory(01Creational-Pattern/04Prototype)
add_subdirectory(01Creational-Pattern/05Singleton)
add_subdirectory(02Behavioral-Pattern/06Chain-Of-Responsibility)
add_subdirectory(02Behavioral-Pattern/07Visitor)
add_subdirectory(02Behavioral-Pattern/08Command)
add_subdirectory(02Behavioral-Pattern/09Iterator)
add_subdirectory(02Behavioral-Pattern/10Mediator)
add_subdirectory(02Behavioral-Pattern/11Memento)
add_subdirectory(02Behavioral-Pattern/12Observer)
add_subdirectory(02Behavioral-Pattern/13State)
add_subdirectory(02Behavioral-Pattern/14Strategy)
